--- a/.github/workflows/notify-of-release.yml
+++ b/.github/workflows/notify-of-release.yml
@@ -18,9 +18,9 @@ jobs:
           MESSAGE_DESCRIPTION: New Release of the python-client
           MESSAGE_URL: https://github.com/steamship-core/python-client/releases
           MESSAGE_COLOR: 5814783
-          AUTHOR_NAME: null;
-          AUTHOR_URL: null;
-          AUTHOR_AVATAR: null;
-          FOOTER_TEXT: null;
-          FOOTER_URL: null;
-          IMAGE: null;
+          AUTHOR_NAME: ""
+          AUTHOR_URL: ""
+          AUTHOR_AVATAR: ""
+          FOOTER_TEXT: ""
+          FOOTER_URL: ""
+          IMAGE: ""
