--- a/.github/workflows/notify-of-release.yml
+++ b/.github/workflows/notify-of-release.yml
@@ -5,22 +5,12 @@ on:
     types: [published]
 
 jobs:
-  build:
+  publish-release-summary-to-discord:
     runs-on: ubuntu-latest
+    name: Github Releases To Discord
     steps:
-      - name: Discord notification
-        uses: LeGitHubDeTai/github-to-discord@main
-        env:
-          DISCORD_WEBHOOK: https://discord.com/api/webhooks/1121127603496034415/f-C87wJCJRtMFaxYrUKdh_06-mQXRkcInCgLL1ztVZsKjzNWyfenFkUWjVefXB82I6wA
-          DISCORD_USERNAME: Steamship Release Bot
-          DISCORD_AVATAR: https://www.steamship.com/images/brand/steamship-logo-light-symbol.png
-          MESSAGE_TITLE: New python-client release
-          MESSAGE_DESCRIPTION: New Release of the python-client
-          MESSAGE_URL: https://github.com/steamship-core/python-client/releases
-          MESSAGE_COLOR: 5814783
-          AUTHOR_NAME: ""
-          AUTHOR_URL: ""
-          AUTHOR_AVATAR: ""
-          FOOTER_TEXT: ""
-          FOOTER_URL: ""
-          IMAGE: ""
+      - name: Sending message
+        uses: nhevia/discord-styled-releases@main
+        with:
+          webhook_id: 1121127603496034415
+          webhook_token: f-C87wJCJRtMFaxYrUKdh_06-mQXRkcInCgLL1ztVZsKjzNWyfenFkUWjVefXB82I6wA
